--- a/index.html
+++ b/index.html
@@ -6,17 +6,30 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hola Mundo</title>
+
+   
 </head>
 
 <body>
     <header></header>
     <nav></nav>
     <section>
+        <h1>Inicio</h1>
 
-        <div id="app"></div>
-        <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
-        <script src="./js/app.js"></script>
+        <div id="app">
+            <!--Sentencia javascript dentro de Vue-->
+            <p>{{1+1}}</p>
+            <p>{{true ? 'activo' : 'inactivo'}}</p>
+            <h3>{{nombre + " "+ apellido + " " + mensaje}}</h3>
+            <button v-on:click="cambiarNombre()">Cambiar Nombre</button>
+            <button v-on:click="cambiarApellido()">Cambiar Apellido</button>
+        </div>
+
+        <h1>Fin</h1>
+
     </section>
+    <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
+    <script src="./js/app.js"></script>
     <footer></footer>
 </body>
 
